move command + improve block commands